fix booking on mobile version

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1627,6 +1627,14 @@ form#newsletter input[type=submit] {
 .sweet-alert button.confirm:hover{
 	background-color: #6f2a2a !important;
 }
+.modal.fade{
+	top: -600px;
+}
+@media (max-width: 767px) {
+	.modal.fade.in {
+		top: 10%;
+	}
+}
 /*soc icon
 =======================================================================*/
 
